1.6.0
Added help docs to HTML tag plugin.
Added submenus to HTML tag plugin.
Fixed a number of outdated tags.
Added HTML tag plugin.
Set main window title.
Fixed saving dialog geometry.
Fixed saving file including suffix to recentfiles.
Fixed entering path in filedialog.
Fixed freeze on restoring empty sesion.
Better save restore of main/doc viewer windows.
GUI tweak to file dialog.
Tided configure output.
Added export to PDF ( page size is in prefs ).
Added import from PDF ( will only import text from pdf ).
Added global search for define to toolbar.
Searching in current document now includes local defines.
Added line nunmber of define in dropdown box when finding definition.
Go to definition button in toolbar now only searches in the current document.
Adding  @NNN after filename will open file at line NNN eg:kkeditqt /etc/fstab@5, if file is already open just select tab and jump to line.
Fixed main Makefile.am.
Code clean.
Cleaned buildplugs script.
Removed redundant makedocset script.

1.5.2
Speed improvements for bulddocset.
Fixed segfault when restoring session when a file has a bookmakrk entry but cant be found.
Added sqlite3 as dependency.
Fixed not showing documentaion after building.
Fixed default names/versions in dialogs for building docs/docset.
Fixed delay before showing progress bar when building docs.
Added 'Reload' to plugin prefs dialog.
Docview now automatically goes to page when 'Search In Docsets' only has one result.
Changed document plugin .info files to either show/not show in 'Find API' menu,
Changed document plugin .info files to either include/not include in all searches in 'Find API' menu,
Now holding 'CNTL' while selecting an item in the FavouritesPlugin menu will remove it from the menu.
Speed improvements for building docset.
Fixed annoying warnings from json language plugin.
Removed menu style option from prefs.
Added QT_ProxyStyle class.
Fixed storing current url of docviewer ( necessary for favourites plugin etc ).