@@ -2,4 +2,30 @@
 
 DOCUMENT="$1"
 shift
-echo -n "<img src=\"${@}\" alt=\"${@}\" title=\"${@}\" height=\"100\" width=\"100\">"
+TITLE="$(basename "${@}")"
+WIDTH=100
+HEIGHT=100
+RESULT="$TITLE|$WIDTH|$HEIGHT"
+
+GOTYADQT=$(which yadqt 2>/dev/null)
+if [[ $? -eq 0 ]];then
+	RESULT=$($GOTYADQT --type=form -t "Image Properties" -b "Title|Width|Height" --default="$RESULT" --width=300 --height=0)
+	if [[ $? -eq 1 ]];then
+		exit
+	fi
+else
+	GOTYADQT=$(which yad 2>/dev/null)
+	if [[ $? -eq 0 ]];then
+		RESULT=$($GOTYADQT  --form "$TITLE" --field=Title "$WIDTH" --field=Width "$HEIGHT" --field=Height)
+		if [[ $? -eq 1 ]];then
+			exit
+		fi
+	fi
+fi
+
+TITLE=$(echo "$RESULT"|awk -F\| '{print $1}')
+WIDTH=$(echo "$RESULT"|awk -F\| '{print $2}')
+HEIGHT=$(echo "$RESULT"|awk -F\| '{print $3}')
+
+echo -n "<img src=\"${@}\" alt=\"${@}\" title=\"$TITLE\" height=\"$HEIGHT\" width=\"$WIDTH\">"
+
