@@ -27,7 +27,7 @@
 		<img src="pretag3.png" alt="pretag3.png"><br>
 		HTML Tags->Remove Tags.<br>
 		<img src="apretag3.png" alt="apretag3.png"><br><br>
-		When selecting HTML Tags->Font Styles->Font or  HTML Tags->Font Styles->Font Colour and yadqt is installed an appropriate dialiag is popped up, yadqt is available here:<br>
+		When selecting HTML Tags->Font Styles->Font or  HTML Tags->Font Styles->Font Colour or HTML Tags->Links->Image and yadqt is installed an appropriate dialiag is popped up, yadqt is available here:<br>
 		<a href="https://github.com/KeithDHedger/YadQt">YadQt</a><br>
 		Alternativly if yad is available that will be used, yad is in most repos or here:<br>
 		<a href="https://github.com/v1cont/yad/">yad</a><br><br>
